# GameOfLife_Dev_Tech

./: CMakeLists.txt  Makefile  README.md  cunit_test.c  dconfig  game.c  game.h  includes.h  main.c
.github/workflows/: main.yml
console/: CMakeLists.txt  draw.c  draw.h
game/: CMakeLists.txt  game.c  game.h
sdl/: CMakeLists.txt  sdl.c  sdl.h
